--- a/index.html
+++ b/index.html
@@ -35,16 +35,17 @@
     <section class="two-thirds column row intro fade2">
       <a target="_blank" href="https://de.linkedin.com/in/jamescambrian"/><img title="James Shaw Full Stack Designer" class="profile-image desaturate" src="https://lh3.googleusercontent.com/-EutRQLREhAk/AAAAAAAAAAI/AAAAAAAANX0/-eQAKht4Ri8/photo.jpg?"/></a>
       <h1 class="greeting"></h1>
-      <p><span class="redbold"><span class="drop-cap">I</span>’m James</span>, a Berlin-based British web designer and developer, currently grafting away at <a target="_blank" title="Link to Delivery Hero" href="https://www.deliveryhero.com"/>Delivery Hero</a>.</p><p>I'm particularly passionate about typography and image led web publications. I also like tea, raves and records a bit. Feel free to <a target="_blank" title="Link to Delivery Hero" href="mailto:james.cambrian@gmail.com"/>email</a> me, <a target="_blank" title="Link to Blog" href="https://de.linkedin.com/in/jamescambrian"/>add</a> me or check out my <a target="_blank" title="Link to My Blog" href="http://arrowsofindecision.tumblr.com/"/>blog</a>.</p>
+      <p><span class="redbold"><span class="drop-cap">I</span>’m James</span>, a Berlin-based British web designer, developer and illustrator currently grafting away as a freelancer.</p><p>I'm particularly passionate about typography and conceptual design. I also like tea, raves and records a bit. Feel free to <a target="_blank" title="Link to Delivery Hero" href="mailto:james.cambrian@gmail.com"/>email</a> me, <a target="_blank" title="Link to Blog" href="https://de.linkedin.com/in/jamescambrian"/>add</a> me or check out my <a target="_blank" title="Link to My Blog" href="http://acidocambrio.tumblr.com/"/>illustration blog</a>. Better still check my <a target="_blank" title="Link to my CV" href="http://aguycalledjames.com/cv/"/>CV</a>.</p>
     </section>
   </div>
 </div>     
 
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+<!-- Timed greeting -->
 <script> 
 var data = [
     [0, 12, "Mornin<span class='apostrophe'></span> Burd"],
-    [12, 18, "Afternoon Burds"],
+    [12, 18, "Afternoon Burd"],
     [18, 24, "Evenin<span class='apostrophe'></span> Burd"]
 ],
     hr = new Date().getHours();
