--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="description" content="James Cambrian Designer, Frontend Developer, Tea Lover">
-<meta name="keywords" content="Web designer,frontend developer, designer, HTML5, SASS, HTML, .com millionaire, CSS,CSS3, Berlin">
-<title>A Guy Called James | Designer Frontend Developer</title>
+<meta name="keywords" content="Web designer, Illustrator, Berlin, frontend developer, designer, HTML5, SASS, HTML, .com millionaire, CSS,CSS3, Berlin">
+<title>A Guy Called James | Illustrator | Designer | Frontend Developer</title>
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link href='https://fonts.googleapis.com/css?family=Libre+Baskerville|Abril+Fatface' rel='stylesheet' type='text/css'>
@@ -12,7 +12,7 @@
 <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>       
-<!-- 
+<!--
               _                      _           _                      
              | |                    | |         | |                     
    ___   ___ | |__ ______ ___   ___ | |__ ______| |__   ___   ___       
@@ -25,17 +25,18 @@
  | | | | (_| |      | | | | (_| | | | | | (_| | | |_| |  __/ (_| | | | |
  |_| |_|\__,_|      |_| |_|\__,_| |_| |_|\__,_|  \__, |\___|\__,_|_| |_|
                                                   __/ |                 
-                                                 |___/                                                                                                
+                                                 |___/              
 -->
+
 <div class="outer-wrap">
   <div class="container main">
     <div class="one-third column profile fade1 row">
-      <a target="_blank" href="https://de.linkedin.com/in/jamescambrian"/><img title="google plus profile image" class="u-full-width profile-image desaturate" src="https://lh3.googleusercontent.com/-EutRQLREhAk/AAAAAAAAAAI/AAAAAAAANX0/-eQAKht4Ri8/photo.jpg?"/></a>
+      <a target="_blank" href="https://de.linkedin.com/in/jamescambrian"/><img title="google plus profile image" class="u-full-width profile-image desaturate" src="images/pic.jpg"/></a>
     </div>
     <section class="two-thirds column row intro fade2">
-      <a target="_blank" href="https://de.linkedin.com/in/jamescambrian"/><img title="James Shaw Full Stack Designer" class="profile-image desaturate" src="https://lh3.googleusercontent.com/-EutRQLREhAk/AAAAAAAAAAI/AAAAAAAANX0/-eQAKht4Ri8/photo.jpg?"/></a>
+      <a target="_blank" href="https://de.linkedin.com/in/jamescambrian"/><img title="James Shaw Full Stack Designer" class="profile-image desaturate" src="images/pic.png"/></a>
       <h1 class="greeting"></h1>
-      <p><span class="redbold"><span class="drop-cap">I</span>’m James</span>, a Berlin-based British web designer, developer and illustrator currently grafting away as a freelancer.</p><p>I'm particularly passionate about typography and conceptual design. I also like tea, raves and records a bit. Feel free to <a target="_blank" title="Link to Delivery Hero" href="mailto:james.cambrian@gmail.com"/>email</a> me, <a target="_blank" title="Link to Blog" href="https://de.linkedin.com/in/jamescambrian"/>add</a> me or check out my <a target="_blank" title="Link to My Blog" href="http://acidocambrio.tumblr.com/"/>illustration blog</a>. Better still check my <a target="_blank" title="Link to my CV" href="http://aguycalledjames.com/cv/"/>CV</a>.</p>
+      <p><span class="redbold"><span class="drop-cap">I</span>’m James</span>, a passionate all-rounder with over 12 years of experience as an illustrator, designer and frontend developer.</p><p>I love fun and authentic projects, tea, records and old copies of the Dandy, Beano and Beezer comics. I'm in the process of building a swishy new site but for the moment please check out my <a target="_blank" title="Link to My Illustration Portfolio" href="http://aguycalledjames.com/illustration/"/>illustrations</a>, my <a target="_blank" title="Link to My CV" href="http://aguycalledjames.com/cv/"/> CV </a>and, if you are really bored, my <a target="_blank" title="Link to my blog" href="http://arrowsofindecision.tumblr.com/"/>blog</a>.</p>
     </section>
   </div>
 </div>     
@@ -43,7 +44,7 @@
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <!-- Timed greeting -->
 <script> 
-var data = [
+    var data = [
     [0, 12, "Mornin<span class='apostrophe'></span> Burd"],
     [12, 18, "Afternoon Burd"],
     [18, 24, "Evenin<span class='apostrophe'></span> Burd"]
